Fixes: 'follow us' spacing, smaller labels on 'blog', opinion carousels narrower, ipad mockup moved down, spacings in 'numbers' blurred, breathing space in footer

--- a/style.sass
+++ b/style.sass
@@ -8,6 +8,7 @@
 $mogo-yellow: #fce38a
 $mogo-red: #f38181
 $mogo-cyan: #95e1d3
+$mogo-cyan-light: #BFEDE5
 
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat|Roboto')
 
@@ -147,10 +148,10 @@ hr
 	align-items: center
 
 	div
-		border-left: 1px solid #fff
+		border-left: 1px solid $mogo-cyan-light
 
 		&:last-of-type
-			border-right: 1px solid #fff
+			border-right: 1px solid $mogo-cyan-light
 
 	h1, p
 		color: #fff
@@ -181,7 +182,7 @@ hr
 	height: 100%
 	width: 100%
 	background-color: rgba(255, 255, 255, 0.8)
-	padding: 5vh 0
+	padding-top: 5vh
 
 	&>h4
 		font-family: "Kaushan Script"
@@ -194,7 +195,7 @@ hr
 
 	img
 		max-height: 500px
-		margin: -50px auto -100px
+		margin: 0 auto
 
 .service
 	padding-bottom: 5vh
@@ -217,6 +218,8 @@ hr
 			background-color: $mogo-cyan
 
 #opinions1
+	.item
+		max-width: 900px
 	.fa
 		color: $mogo-cyan
 		font-size: 5em
@@ -254,6 +257,8 @@ hr
 	margin-bottom: 5vh
 
 #opinions2
+	.item
+		max-width: 800px
 	p
 		margin-bottom: 2vh
 	hr
@@ -315,8 +320,8 @@ hr
 .date
 	background-color: $mogo-cyan
 	color: #fff
-	padding: 15px 0
-	width: 70px
+	padding: 10px 0
+	width: 50px
 	position: absolute
 	top: 35%
 	left: -1vh
@@ -354,6 +359,7 @@ hr
 		font-weight: 700
 	.fa
 		color: $mogo-cyan
+		margin-left: 5px
 	h4, small
 		font-weight: 700
 	hr
@@ -371,6 +377,8 @@ hr
 		border-radius: 0
 	p
 		margin-bottom: 3vh
+	small
+		margin-right: 20px
 
 .blogs
 	h4
@@ -394,6 +402,7 @@ hr
 		width: 200px
 		height: auto
 footer
+	margin-bottom: 2vh
 	hr
 		border-width: 1px
 		border-color: #eee
